# bilibili-manga-watermark-remover

./: .prettierrc  README.md  components.d.ts  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish.yml
src/: App.vue  AppContent.vue  bindings.ts  main.ts  types.ts  utils.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  download_manager.rs  errors.rs  events.rs  extensions.rs  main.rs  types.rs  utils.rs  watermark.rs
src-tauri/src/commands/: download_episodes.rs  generate_background.rs  generate_qr_code.rs  get_background_dir_abs_path.rs  get_background_dir_relative_path.rs  get_bili_cookie_status_data.rs  get_config.rs  get_image_infos.rs  get_jpg_image_infos.rs  get_manga_data.rs  get_manga_dir_data.rs  get_manga_episodes.rs  get_qr_code_status_data.rs  mod.rs  open_image.rs  remove_watermark.rs  save_config.rs  search_manga.rs  show_path_in_file_manager.rs
src-tauri/src/responses/: bili_response.rs  cookie_status_data.rs  episode_data.rs  generate_qr_code_data.rs  image_index_data.rs  image_token_data.rs  manga_data.rs  mod.rs  qr_code_status_data.rs  search_data.rs
src/components/: AboutDialog.vue  BackgroundCropper.vue  BackgroundMaker.vue  DownloadPane.vue  MangaDirIndicator.vue  RemoveProgress.vue  StatusIndicator.vue  WatermarkCropper.vue  WatermarkPane.vue  WatermarkPicker.vue
src/components/DownloadComponents/: DownloadingList.vue  EpisodePane.vue  QrCodeViewer.vue  SearchPane.vue  SearchResult.vue
src/components/WatermarkComponents/: MangaDirIndicator.vue  WatermarkCropper.vue
