[package]
name = "bili-manga-watermark-remover"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["devtools"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta.9"

specta = "=2.0.0-rc.12"
tauri-specta = { version = "=2.0.0-rc.11", features = ["typescript"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

base64 = "0.22.1"
image = "0.25.1"
jpeg-encoder = { version = "0.6.0", features = ["simd"] }
imagesize = "0.13.0"

rayon = "1.10"
walkdir = "2"
anyhow = "1.0"
showfile = "0.1.1"
dirs = "5.0"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"
