[package]
name = "bilibili-manga-watermark-remover"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["devtools"] }
tauri-plugin-shell = { version = "2.0.0-rc" }
tauri-plugin-dialog = { version = "2.0.0-rc" }
tauri-plugin-fs = { version = "2.0.0-rc" }

specta = { version = "2.0.0-rc" }
tauri-specta = { version = "2.0.0-rc", features = ["derive", "typescript"] }
specta-typescript = { version = "0.0.7" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

base64 = { version = "0.22.1" }
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png"] }
jpeg-encoder = { version = "0.6.0", features = ["simd"] }

rayon = { version = "1.10" }
walkdir = { version = "2" }
anyhow = { version = "1.0" }
showfile = { version = "0.1.1" }
parking_lot = { version = "0.12.3", features = ["send_guard"] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"
